samples/_failures_safe/1761794093_aa9d38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f83f3b5e.c: In function ‘main’:
./samples/SAFE/__tmp_f83f3b5e.c:152:18: error: expected ‘;’ at end of input
  152 |     init_analyzer
      |                  ^
      |                  ;
./samples/SAFE/__tmp_f83f3b5e.c:152:5: error: expected declaration or statement at end of input
  152 |     init_analyzer
      |     ^~~~~~~~~~~~~
